tests/typing/bad/testfile-constructor4-1.scala
class A(x: Int, y: Int) { }
class B { var a: A = new A(1) }
object Main { def main(args: Array[String]) { } }
